# pydantic-ai-2026-teaching-plan

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml  evals.yml  maintenance.yml
docs/: analysis.md  conf.py  framework-comparison.md  index.md  keywords.md  lesson-review-2026-06-11.md  python-ai-topic-map.md  tone-rewrite-plan.md
docs/_static/: custom.css
docs/exercises/: 00-providers.md  01-basics.md  02-rag.md  03-monty.md  04-evals-graph-multi-agent.md  05-durable-chatbot.md  index.md
docs/lessons/: 00-model-providers-and-setup.md  01-pydantic-ai-basics.md  02-rag.md  03-monty-isolation.md  04-evals-graph-multi-agent.md  05-durable-chatbot-wrapup.md  index.md
docs/slides/: 00-model-providers-and-setup.md  01-pydantic-ai-basics.md  02-rag.md  03-monty-isolation.md  04-evals-graph-multi-agent.md  05-durable-chatbot-wrapup.md  index.md
examples/: course_logging.py
examples/00_providers/: provider_smoke_test.py
examples/01_basics/: hello_agent.py  httpx_raw_api_log.py  logfire_agent.py  raw_function_call.py  tool_agent.py
examples/02_rag/: embeddings.py  load_docs.py  rag_agent.py  schema.sql
examples/03_monty/: code_mode_agent.py
lessons/: 00-model-providers-and-setup.md  01-pydantic-ai-basics.md  02-rag.md  03-monty-isolation.md  04-evals-graph-multi-agent.md  05-durable-chatbot-wrapup.md
references/: README.md
slides/: 00-model-providers-and-setup.md  01-pydantic-ai-basics.md  02-rag.md  03-monty-isolation.md  04-evals-graph-multi-agent.md  05-durable-chatbot-wrapup.md
(+19 files in other folders)
